--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "npm run test:test:chrome && npm run test:test:firefox",
     "test:test:chrome": "cross-env ENV=test FORCE_COLOR=0 BROWSER=chrome cucumber-js --config=config/cucumber.js",
     "test:test:firefox": "cross-env ENV=test FORCE_COLOR=0 BROWSER=firefox cucumber-js --config=config/cucumber.js",
+      "posttest": "npx ts-node src/helper/report/report.ts",
+
     "test:failed": "cucumber-js -p rerun @rerun.txt"
   },
   
