--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "pretest": "npx ts-node src/helper/report/init.ts",
+    "pretest": "npx ts-node src/helper/report/init.ts && eslint --fix ./src --ext .ts,.tsx,.js",
     "test": "npm run test:test:chrome && npm run test:test:firefox",
     "test:test:chrome": "cross-env ENV=test FORCE_COLOR=0 BROWSER=chrome cucumber-js --config=config/cucumber.js",
     "test:test:firefox": "cross-env ENV=test FORCE_COLOR=0 BROWSER=firefox cucumber-js --config=config/cucumber.js",
