--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "scripts": {
     "pretest": "npx ts-node src/helper/report/init.ts && eslint --fix ./src --ext .ts,.tsx,.js",
-    "test": "npm run test:test:chrome && npm run test:test:firefox && npm run test:test:edge",
+    "test": "npm run test:test:chrome && npm run test:test:firefox && npm run test:test:edge && npm run test:test:webkit",
     "test:test:chrome": "cross-env ENV=test FORCE_COLOR=0 BROWSER=chrome cucumber-js --config=config/cucumber.js",
     "test:test:firefox": "cross-env ENV=test FORCE_COLOR=0 BROWSER=firefox cucumber-js --config=config/cucumber.js",
     "test:test:edge": "cross-env ENV=test FORCE_COLOR=0 BROWSER=edge cucumber-js --config=config/cucumber.js",
+    "test:test:webkit": "cross-env ENV=test FORCE_COLOR=0 BROWSER=webkit cucumber-js --config=config/cucumber.js",
     "posttest": "npx ts-node src/helper/report/report.ts",
     "test:failed": "cucumber-js -p rerun @rerun.txt"
   },
